--- a/1-glossary/client/src/index.html
+++ b/1-glossary/client/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"></link>
   </head>
   <body>
-    <main><div id="root"></div></main>
-    <script src="bundle.js"></script>
+    <main><div id="app"></div></main>
+    <script src="main.js"></script>
   </body>
 </html>
